# transtractor-lib

./: Cargo.toml  README.md  pyproject.toml
python/transtractor/: configs
transtractor_configs/: Cargo.toml
transtractor_configs/configs/au/: cba__credit_card__1.json  cba__debit__1.json  cba__loan__1.json  nab__classic_banking__1.json
transtractor_configs/src/: lib.rs
transtractor_core/: Cargo.toml
transtractor_core/src/: lib.rs
transtractor_py/: Cargo.toml
transtractor_py/src/: lib.rs
transtractor_py/src/python/: lib_config_db.rs  lib_parser.rs  utils.rs
transtractor_rs/: Cargo.toml
transtractor_rs/examples/: debug_extract.rs  parse_statement.rs  parse_with_defaults.rs
transtractor_rs/src/: api.rs  error.rs  lib.rs  pdf_extractor.rs
transtractor_rs/tests/: integration_test.rs
