[package]
name = "transtractor_configs"
version = "0.9.2"
edition = "2024"
description = "Bundled bank statement parsing configurations for transtractor."
authors = ["Daniel Weber <develop@transtractor.net>"]
license = "MIT"
repository = "https://github.com/transtractor/transtractor-lib"

[lib]
name = "transtractor_configs"
crate-type = ["rlib"]
