[package]
name = "transtractor_py"
version = "0.9.2"
edition = "2024"
description = "Python extension module for transtractor_core. Provides high-level Python API with pdfplumber integration."
authors = ["Daniel Weber <develop@transtractor.net>"]
license = "MIT"
repository = "https://github.com/transtractor/transtractor-lib"

[lib]
name = "transtractor"
crate-type = ["cdylib"]

[dependencies]
transtractor_core = { path = "../transtractor_core" }
pyo3 = { version = "0.27.2", features = ["extension-module"] }
