[package]
name = "transtractor_rs"
version = "0.9.2"
edition = "2024"
description = "High-level Rust API for extracting transactions from PDF bank statements. Complete end-to-end solution with pdfium-render integration."
authors = ["Daniel Weber <develop@transtractor.net>"]
license = "MIT"
repository = "https://github.com/transtractor/transtractor-lib"

[lib]
name = "transtractor_rs"
crate-type = ["rlib"]

[dependencies]
transtractor_core = { path = "../transtractor_core" }
transtractor_configs = { path = "../transtractor_configs" }
lopdf = "0.39"
thiserror = "1.0"
tempfile = "3.0"
